--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "faker": "^5.5.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar": "^1.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
